@@ -1,6 +1,9 @@
 Release 1.0.8 (in development)
 ==============================
 
+* #675: Fix IndexErrors when including nonexisting lines with
+  :rst:dir:`literalinclude`.
+
 * #676: Respect custom function/method parameter separator strings.
 
 * #682: Fix JS incompatibility with jQuery >= 1.5.
